flaresolverr/flaresolverr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: flaresolverr
spec:
  type: ClusterIP
  ports:
    - port: 8191
      targetPort: 8191
  selector:
    app: flaresolverr
